Write about page, change 404 page, add google analytics Add archive page

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -26,6 +26,11 @@ img {
     max-width: 100%;
 }
 
+img.emoji {
+  display: inline;
+  margin: 0;
+}
+
 blockquote {
     letter-spacing: 3px;
     margin:0px;
