--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,9 @@
         <a href="/" class="logo">{{ site.title }}</a>
 
         <ul class="menu">
+            <li class="menu__entry"><a href="{{ '/' | prepend: site.baseurl }}">Home</a></li>
+            <li class="menu__entry"><a href="{{ '/archive' | prepend: site.baseurl }}">Archive</a></li>
             <li class="menu__entry"><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
-            <li class="menu__entry"><a href="{{ '/' | prepend: site.baseurl }}">Blog</a></li>
         </ul>
     </div>
 
